# AgenticRAG-Lab

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-real.txt
data/processed/hotpotqa/: dev_slice.jsonl  dev_slice_rerank100.jsonl  e2e_benchmark_20.json  real_ablation_100_rerank.json  real_ablation_500_noreranker.json
doc/: ARCHITECTURE.md  BENCHMARK_RESULTS.md  BLOG_RRF_RETROGRADE.md  LEARNING_GUIDE.md  PROJECT_DESCRIPTION.md  data_flow.html
scripts/: prepare_hotpotqa_slice.py  run_eval.py  run_hotpotqa_e2e_benchmark.py  run_hotpotqa_real_ablation.py  run_hotpotqa_retrieval_ablation.py  run_hotpotqa_retrieval_baseline.py
src/agentic_rag_lab/: __init__.py  __main__.py  agent.py  chunking.py  critic.py  demo.py  llm_synthesizer.py  models.py  mvp.py  planner.py  router.py  synthesizer.py  text.py  web.py
src/agentic_rag_lab/data/: __init__.py  hotpotqa.py
src/agentic_rag_lab/evaluation/: __init__.py  hotpotqa.py  metrics.py  runner.py
src/agentic_rag_lab/retrieval/: __init__.py  embedding_semantic.py  hybrid.py  lexical.py  reranker.py  semantic.py
tests/: test_agentic_rag.py  test_critic.py  test_embedding_semantic.py  test_evaluation_runner.py  test_hotpotqa.py  test_hotpotqa_ablation.py  test_hotpotqa_retrieval_baseline.py  test_hybrid_retriever.py  test_llm_synthesizer.py  test_metrics.py  test_mvp_server.py  test_mvp_service.py  test_planner.py  test_reranker.py  test_router.py
