[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-rag-lab"
version = "0.1.0"
description = "A lightweight Agentic RAG lab for multi-hop QA experiments."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenAI Codex" }]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

